martin-mbtiles/tests/snapshots/mbtiles__databases@v1__flat.snap
---
source: martin-mbtiles/tests/mbtiles.rs
expression: actual_value
---
[[]]
type = 'table'
tbl_name = 'metadata'
sql = '''
CREATE TABLE metadata (
             name text NOT NULL PRIMARY KEY,
             value text)'''
values = [
    '(  "agg_tiles_hash", "F144D5265985B9D7AC14E7F1F336C6E5"  )',
    '(  "md-edit", "value - v1"  )',
    '(  "md-remove", "value - remove"  )',
    '(  "md-same", "value - same"  )',
]

[[]]
type = 'table'
tbl_name = 'tiles'
sql = '''
CREATE TABLE tiles (
             zoom_level integer NOT NULL,
             tile_column integer NOT NULL,
             tile_row integer NOT NULL,
             tile_data blob,
             PRIMARY KEY(zoom_level, tile_column, tile_row))'''
values = [
    '(  5, 0, 0, blob(same)  )',
    '(  5, 1, 1, blob(edit-v1)  )',
    '(  5, 2, 2, blob(remove)  )',
    '(  6, 0, 3, blob(same)  )',
    '(  6, 0, 5, blob(1-keep-1-rm)  )',
    '(  6, 1, 4, blob(edit-v1)  )',
    '(  6, 2, 6, blob(1-keep-1-rm)  )',
]

[[]]
type = 'index'
tbl_name = 'metadata'

[[]]
type = 'index'
tbl_name = 'tiles'
